--- a/_posts/2023-03-25-ai-vs-ri.md
+++ b/_posts/2023-03-25-ai-vs-ri.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-<figure class="wp-block-image size-full">![](/assets/2023/03/ai-vs-ri.png)</figure>
+![AI vs. RI](/assets/2023-03-ai-vs-ri.png "AI vs. RI")
