--- a/_posts/2021-09-21-bad-dog.md
+++ b/_posts/2021-09-21-bad-dog.md
@@ -6,4 +6,4 @@ layout: post
 
 Noted progressive animal nutritionist Lysenko Wang shows off her vegan dog.
 
-<figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper"><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="473" loading="lazy" src="https://www.youtube.com/embed/xGzeDurfuF8?feature=oembed" title="My dog is a vegetarian" width="840"></iframe></div></figure>
+<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="473" loading="lazy" src="https://www.youtube.com/embed/xGzeDurfuF8?feature=oembed" title="My dog is a vegetarian" width="840"></iframe>
