--- a/_posts/2021-12-14-gps-says.md
+++ b/_posts/2021-12-14-gps-says.md
@@ -4,4 +4,6 @@ author: 'Noam Sain'
 layout: post
 ---
 
-![](/assets/2021/2021-12-turn-left.jpg)
+“GPS says turn left now!”
+
+![GPS says …](/assets/2021/2021-12-turn-left.jpg "GPS says …")
