add alts and captions

--- a/_posts/2022-08-31-doh.md
+++ b/_posts/2022-08-31-doh.md
@@ -1,43 +1,43 @@
 ---
-title: D’oh!
+title: 'D’oh!'
 author: 'Noam Sain'
 layout: post
 ---
 
-![](/assets/2022/2022-08-image001.jpg)
+![D’oh!](/assets/2022/2022-08-image001.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image002.jpg)
+![D’oh!](/assets/2022/2022-08-image002.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image003.jpg)
+![D’oh!](/assets/2022/2022-08-image003.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image004.jpg)
+![D’oh!](/assets/2022/2022-08-image004.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image005.jpg)
+![D’oh!](/assets/2022/2022-08-image005.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image006.jpg)
+![D’oh!](/assets/2022/2022-08-image006.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image007.jpg)
+![D’oh!](/assets/2022/2022-08-image007.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image008.jpg)
+![D’oh!](/assets/2022/2022-08-image008.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image009.jpg)
+![D’oh!](/assets/2022/2022-08-image009.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image010.jpg)
+![D’oh!](/assets/2022/2022-08-image010.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image011.jpg)
+![D’oh!](/assets/2022/2022-08-image011.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image012.jpg)
+![D’oh!](/assets/2022/2022-08-image012.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image013.jpg)
+![D’oh!](/assets/2022/2022-08-image013.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image014.jpg)
+![D’oh!](/assets/2022/2022-08-image014.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image015.jpg)
+![D’oh!](/assets/2022/2022-08-image015.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image016.jpg)
+![D’oh!](/assets/2022/2022-08-image016.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image017.jpg)
+![D’oh!](/assets/2022/2022-08-image017.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image018.jpg)
+![D’oh!](/assets/2022/2022-08-image018.jpg "D’oh!")
 
-![](/assets/2022/2022-08-image019.jpg)
+![D’oh!](/assets/2022/2022-08-image019.jpg "D’oh!")
