--- a/_posts/2010-03-12-who-knew.md
+++ b/_posts/2010-03-12-who-knew.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-![](https://3.bp.blogspot.com/_8aN4krk1nsk/TG_ALCrFsVI/AAAAAAAAAb4/AgnA4jQr5c0/s1600/20100312.jpg)
+![Who knew?](https://3.bp.blogspot.com/_8aN4krk1nsk/TG_ALCrFsVI/AAAAAAAAAb4/AgnA4jQr5c0/s1600/20100312.jpg "Who knew?")
