add alts and captions to images

--- a/_posts/2010-09-22-door-stop.md
+++ b/_posts/2010-09-22-door-stop.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-[![](https://2.bp.blogspot.com/_8aN4krk1nsk/TJn9OeqFeFI/AAAAAAAAAfk/t0I1stj0cyk/s1600/photo.JPG)](https://2.bp.blogspot.com/_8aN4krk1nsk/TJn9OeqFeFI/AAAAAAAAAfk/t0I1stj0cyk/s1600/photo.JPG)
+![Door stop](https://2.bp.blogspot.com/_8aN4krk1nsk/TJn9OeqFeFI/AAAAAAAAAfk/t0I1stj0cyk/s1600/photo.JPG "Door stop")
