--- a/_posts/2014-01-05-wwjd.md
+++ b/_posts/2014-01-05-wwjd.md
@@ -4,13 +4,13 @@ author: 'Noam Sain'
 layout: post
 ---
 
-In Washington, D.C., an old priest lay dying in the hospital. For years he had faithfully served the people of the nation’s capital and was well known among the elected officials. He motioned for his nurse to come near.  
-  
+In Washington, D.C., an old priest lay dying in the hospital. For years he had faithfully served the people of the nation’s capital and was well known among the elected officials. He motioned for his nurse to come near.
+
 “Yes, Father?” said the nurse.
 
-“I would really like to see President Obama and Senator Reid before I die,” whispered the priest.
+“I would really like to see Resident Obama and Senator Reid before I die,” whispered the priest.
 
-“I’ll see what I can do, Father”, replied the nurse.
+“I’ll see what I can do, Father,” replied the nurse.
 
 The nurse sent the request to The President and Congress and waited for a response.
 
