--- a/_posts/2017-07-23-dilbert.md
+++ b/_posts/2017-07-23-dilbert.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-![](/assets/2017/2017-08-dilbert.jpg)
+![Dilbert](/assets/2017/2017-08-dilbert.jpg "Dilbert")
