--- a/_posts/2018-04-26-overkill.md
+++ b/_posts/2018-04-26-overkill.md
@@ -4,4 +4,6 @@ author: 'Noam Sain'
 layout: post
 ---
 
-![](/assets/2018/2018-04-overkill.jpg)
+“Now that’s just overkill. I mean really, who needs two bikes?”
+
+![Overkill](/assets/2018/2018-04-overkill.jpg "Overkill")
