iframe includes edits

--- a/_posts/2019-12-12-nap-time.md
+++ b/_posts/2019-12-12-nap-time.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-<iframe height="100%" loading="lazy" scrolling="no" src="https://gfycat.com/ifr/TiredGleefulEarwig"  width="100%"></iframe>
+<iframe height="100%" scrolling="no" src="https://gfycat.com/ifr/TiredGleefulEarwig"  width="100%"></iframe>
