--- a/_posts/2009-10-10-577-t-rex-rifle.md
+++ b/_posts/2009-10-10-577-t-rex-rifle.md
@@ -4,4 +4,4 @@ author: 'Noam Sain'
 layout: post
 ---
 
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="630" loading="lazy" src="https://www.youtube.com/embed/7y7KjanpWOk?feature=oembed" title="577 t-rex rifle shots (a.k.a elephant gun)" width="840"></iframe>
+<iframe allowfullscreen="" height="630" src="https://www.youtube.com/embed/7y7KjanpWOk?feature=oembed" title="577 t-rex rifle shots (a.k.a elephant gun)" width="840"></iframe>
