--- a/_posts/2009-02-12-new-words.md
+++ b/_posts/2009-02-12-new-words.md
@@ -4,8 +4,8 @@ author: 'Noam Sain'
 layout: post
 ---
 
-Here is the Washington Post’s “Mensa Invitational,” which once again has asked readers to take any word from the dictionary, alter it by adding, subtracting, or changing one letter, then supplying a new definition.  
-  
+Here is the Washington Post’s “Mensa Invitational,” which once again has asked readers to take any word from the dictionary, alter it by adding, subtracting, or changing one letter, then supplying a new definition.
+
 Here are the winners:
 
 1. Cashtration (n.): The act of buying a house, which renders the purchaser financially impotent for an indefinite period of time.
@@ -40,7 +40,7 @@ The Washington Post has also published the winning submissions to its yearly con
 10. Balderdash, n. A rapidly receding hairline.
 11. Testicle, n. A humorous question on an exam.
 12. Rectitude, n. The formal, dignified bearing adopted by proctologists.
-13. Pokemon, n.. A Rastafarian proctologist.
+13. Pokemon, n. A Rastafarian proctologist.
 14. Oyster, n. A person who sprinkles his conversation with Yiddishisms.
 15. Frisbeetarianism, n. The belief that, after death, the soul flies up onto the roof and gets stuck there.
 16. Circumvent, n. An opening in the front of Jewish men’s boxer shorts.
