--- a/_posts/2009-02-02-hes-a-stud.md
+++ b/_posts/2009-02-02-hes-a-stud.md
@@ -4,13 +4,15 @@ author: 'Noam Sain'
 layout: post
 ---
 
-Two priests died at the same time and met Saint Peter at the Pearly Gates. St. Peter said, “I’d like to get you guys in now, but our computer is down. You’ll have to go back to Earth for about a week, but you can’t go back as priests. So what else would you like to be?”  
-  
+Two priests died at the same time and met Saint Peter at the Pearly Gates. St. Peter said, “I’d like to get you guys in now, but our computer is down. You’ll have to go back to Earth for about a week, but you can’t go back as priests. So what else would you like to be?”
+
 The first priest says, “I’ve always wanted to be an eagle, soaring above the Rocky Mountains.”
 
 “So be it,” says St. Peter, and off flies the first priest.
 
-The second priest mulls this over for a moment and asks, “Will any of this week ‘count,’ Saint Peter?” “No, I told you the computer’s down. There’s no way we can keep track of what you’re doing.”
+The second priest mulls this over for a moment and asks, “Will any of this week ‘count,’ Saint Peter?”
+
+“No, I told you the computer’s down. There’s no way we can keep track of what you’re doing.”
 
 “In that case,” says the second priest, “I’ve always wanted to be a stud.”
 
