--- a/_posts/2018-03-05-its-a-sign-2.md
+++ b/_posts/2018-03-05-its-a-sign-2.md
@@ -1,21 +1,21 @@
 ---
-title: 'It‘s a sign'
+title: 'It’s a sign'
 author: 'Noam Sain'
 layout: post
 ---
 
 From the Indian Hills Community Center
 
-![](/assets/2018/2018-03-your-fault.jpg)
+![Therapy has taught me it’s all your fault](/assets/2018/2018-03-your-fault.jpg)
 
-![](/assets/2018/2018-03-terrible-zoo.jpg)
+![Visited the zoo but they only had one animal. What a shih Tzu!](/assets/2018/2018-03-terrible-zoo.jpg)
 
-![](/assets/2018/2018-03-bye-lingual.jpg)
+![Adios! Au Revoir! I’m bye-lingual](/assets/2018/2018-03-bye-lingual.jpg)
 
-![](/assets/2018/2018-03-im-ok.jpg)
+![I was struck by a bottel of Omega 3 pills. Luckily, my woulds were only super fish oil](/assets/2018/2018-03-im-ok.jpg)
 
-![](/assets/2018/2018-03-number-two.jpg)
+![Puns about poop aren’t my favorite, but they’re a solid number 2](/assets/2018/2018-03-number-two.jpg)
 
-![](/assets/2018/2018-03-small-arms-dealer.jpg)
+![I buy my guns from a guy named T-Rex. He's a small arms dealer](/assets/2018/2018-03-small-arms-dealer.jpg)
 
-![](/assets/2018/2018-03-tell-the-truth.jpg)
+![Things that tell the truth: Small children, drunk people, yoga pants](/assets/2018/2018-03-tell-the-truth.jpg)
