tinkering with quotes, etc.

--- a/_posts/2009-01-13-what-fish.md
+++ b/_posts/2009-01-13-what-fish.md
@@ -6,30 +6,30 @@ layout: post
 
 A game warden in Central Mississippi recently stopped a redneck who was leaving a well-known fishing cove carrying a ice chest full of fish.
 
-The game warden asked the man, “Do you have a license to catch those fish?”
+The game warden asked the man, "Do you have a license to catch those fish?"
 
-“No, sir,” replied the redneck. “I ain’t got none of them there licenses. But, these here are my pet fish.”
+"No, sir," replied the redneck. "I ain't got none of them there licenses. But, these here are my pet fish."
 
-“Pet fish?”
+"Pet fish?"
 
-“Yeah. Every night, I take these here fish down to the lake and let ’em swim ’round for awhile. Then, when I whistle, they jump right back into these here ice chests and I take ’em home.”
+"Yeah. Every night, I take these here fish down to the lake and let 'em swim 'round for awhile. Then, when I whistle, they jump right back into these here ice chests and I take 'em home."
 
-The game warden says, “That’s a bunch of hooey! Fish can’t do that.”
+The game warden says, "That's a bunch of hooey! Fish can't do that."
 
-The redneck looked at the warden for a moment and then said, “It’s the truth Mr. Government Man. I’ll show ya, if ya want.”
+The redneck looked at the warden for a moment and then said, "It's the truth Mr. Government Man. I'll show ya, if ya want."
 
-“OK,” said the warden. “I’ve got to see this!”
+"OK," said the warden. "I've got to see this!"
 
 The two walked back to the cove and the redneck poured the fish into the water.
 
-After several minutes standing there waiting, the warden said, “Well?”
+After several minutes standing there waiting, the warden said, "Well?"
 
-“‘Well’ what?” responded the redneck.
+"'Well' what?" responded the redneck.
 
-The warden asked, “When are you going to call them back?”
+The warden asked, "When are you going to call them back?"
 
-“Call who back?”
+"Call who back?"
 
-“The fish!” demanded the warden.
+"The fish!" demanded the warden.
 
-“What fish?” asked the redneck.
+"What fish?" asked the redneck.
