space out the <ul><li>

--- a/_posts/2009-09-12-nba-or-nfl-2.md
+++ b/_posts/2009-09-12-nba-or-nfl-2.md
@@ -7,15 +7,24 @@ layout: post
 There is a certain organization here in the U.S. Of the members of this organization:
 
 - 36 have been accused of spousal abuse
+
 - 7 have been arrested for fraud
+
 - 19 have been accused of writing bad checks
-- 117 have directly or indirectly bankrupted at least 2 businesses
+
+- 117 have directly or indirectly bankrupted at least two businesses
+
 - 3 have done time for assault
+
 - 71 cannot get a credit card due to bad credit
+
 - 14 have been arrested on drug-related charges
+
 - 8 have been arrested for shoplifting
+
 - 21 currently are defendants in lawsuits
-- 84 have been arrested for drunk driving In the last year
+
+- 84 have been arrested for drunk driving in the last year
 
 Can you guess which organization this is? Would you guess the NBA? How about the NFL?
 
