--- a/_posts/2009-10-10-577-t-rex-rifle.md
+++ b/_posts/2009-10-10-577-t-rex-rifle.md
@@ -4,4 +4,4 @@ author: "Noam Sain"
 layout: post
 ---
 
-<iframe height="630" src="https://www.youtube.com/embed/7y7KjanpWOk?feature=oembed" title="577 t-rex rifle shots (a.k.a elephant gun)" width="840"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7y7KjanpWOk" title="577 t-rex rifle shots (a.k.a elephant gun)"></iframe>
