--- a/_posts/2019-12-12-nap-time.md
+++ b/_posts/2019-12-12-nap-time.md
@@ -4,4 +4,6 @@ author: "Noam Sain"
 layout: post
 ---
 
-<iframe width="560" height="315" scrolling="no" src="https://gfycat.com/ifr/TiredGleefulEarwig"></iframe>
+<video controls src="/assets/2019/20191212-nap-time.mp4" width="480" height="480" poster="/assets/2019/20191212-nap-time.jpg"></video>
+
+Source: Practical Property
