--- a/_posts/2021-09-21-bad-dog.md
+++ b/_posts/2021-09-21-bad-dog.md
@@ -6,4 +6,4 @@ layout: post
 
 Noted progressive animal nutritionist Lysenko Wang shows off her vegan dog.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xGzeDurfuF8" title="My dog is a vegetarian"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xGzeDurfuF8" title="My dog is a vegetarian" allowfullscreen></iframe>
