--- a/_posts/2022-09-02-eat-cake.md
+++ b/_posts/2022-09-02-eat-cake.md
@@ -4,4 +4,6 @@ author: "Noam Sain"
 layout: post
 ---
 
+The more you weigh, the harder you are to kidnap. Stay safe. Eat cake.
+
 ![Stay safe - eat cake](/assets/2022/2022-10-funny16.jpg "Stay safe - eat cake")
