--- a/_posts/1992-04-19-test.md
+++ b/_posts/1992-04-19-test.md
@@ -22,10 +22,17 @@ layout: post
 
 9. If the average person can eat one pork pot sticker in 30 seconds, and the waitress brings a platter of 12 pot stickers, how long will it take five vegans to not eat them?
 
-10. Todd begins walking down Market Street with 12 $1 bills in his wallet. If he always gives panhandlers a single buck, how many legs did he have to step over if he has $3 left when he reaches the other end and met only one double-amputee?
+10. Todd begins walking down Market Street with 12 $1 bills in his wallet. If he always gives panhandlers a single buck, how many legs did he have to step over if he has $3 left when he reaches the other end and meets only one double-amputee?
 
 Advanced Placement Students Only:
 
-11. Katie, Trip, Ling, John-John, and Effie share a three-bedroom apartment on Guerrero for $2,400 a month. Effie and Trip can share one bedroom, but the other three need their own rooms with separate ISDN lines to run their web servers. None of them wants to use the futon in the living room as a bed, and they each want to save $650 in three months to attend Burning Man.
+11. Katie, Trip, Ling, John-John, and Effie share a three-bedroom apartment on Guerrero for $2,400 a month. Effie and Trip can share one bedroom, but the other three need their own rooms with separate ISDN lines to run their web servers. None of them wants to use the futon in the living room as a bed, and they each want to save $650 in three months to attend Burning Man. What is their best option:
 
-What is their best option: a) All five roommates accept a $12/hour job-share as handgun monitors at Mission High. b) Ask Miles, the bisexual auto mechanic, to share Effie and Trip's bedroom for $500/month. c) Petition the Board of Supervisors to advance Ling her annual digital-artists-of-color stipend. d) Rent strike.
+	a. All five roommates accept a $12/hour job-share as handgun monitors at Mission High.
+
+	b. Ask Miles, the bisexual auto mechanic, to share Effie and Trip's bedroom for $500/month.
+
+	c. Petition the Board of Supervisors to advance Ling her annual digital-artists-of-color stipend.
+
+	d. Rent strike.
+
