--- a/_posts/2019-12-12-nap-time.md
+++ b/_posts/2019-12-12-nap-time.md
@@ -4,6 +4,6 @@ author: "Noam Sain"
 layout: post
 ---
 
-<video controls src="/assets/2019/20191212-nap-time.mp4" width="480" height="480" poster="/assets/2019/20191212-nap-time.jpg"></video>
+<video controls poster="/assets/2019/20191212-nap-time.jpg" src="/assets/2019/20191212-nap-time.mp4" type="video/mp4" width="480" height="480"></video>
 
 Source: Practical Property
